# software_course_design

./: .gitignore  AGENTS.md  CLAUDE.md  CMakeLists.txt  README.md  start.sh
assets/app/: app.css  app.js  index.html
assets/demo/: app.css  app.js  index.html
config/: app.example.json  logging.example.json  nginx.conf  server.yaml
docker/: Dockerfile
docs/: api_spec.md  frontend-next-schedule.md  release-final-system-plan.md  schedule.md  前端演示模块说明.md  拍卖管理模块说明.md  接口联调记录.md  数据库设计说明.md  毕业设计需求覆盖矩阵.md  测试报告.md  测试计划与用例说明.md  演示账号与全功能测试流程.md  物品与审核模块说明.md  环境配置说明.md  用户文档.md  竞价与实时通知模块说明.md  答辩演示操作手册.md  系统概要设计报告.md  系统监控与异常处理模块说明.md  统计分析与报表模块说明.md  订单与支付模块说明.md  认证与权限模块说明.md  评价与反馈模块说明.md  部署与答辩说明.md  需求规格说明书.md
docs/UML/: 01-系统上下文图.puml  02-顶层分层视图.puml  03-物品发布与审核链路.puml  04-竞价链路.puml  05-拍卖结束与支付链路.puml  06-部署拓扑图.puml  07-ER概念模型.puml
frontend/: .env.example  API_READINESS.md  README.md  next.config.mjs  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts  tsconfig.tsbuildinfo
frontend/app/: globals.css  layout.tsx  page.tsx  providers.tsx
frontend/app/notifications/: page.tsx
frontend/app/orders/: page.tsx
frontend/components/auction/: auction-card.tsx
frontend/components/layout/: auth-guard.tsx  notification-live-region.tsx  offline-banner.tsx  site-nav.tsx
frontend/components/ui/: button.tsx  toast.tsx
frontend/lib/: auth-context.tsx
frontend/lib/api/: client.ts  mock-data.ts
frontend/lib/query/: keys.ts
frontend/lib/realtime/: use-auction-ws.ts
frontend/lib/utils/: format.ts
frontend/tests/e2e/: smoke.spec.ts
frontend/types/: auction.ts
include/: AntiSnipe.h  AuctionService.h  Bid.h  BidEngine.h  ConfigManager.h  DoubleBuffer.h  HttpServer.h  Item.h  ItemService.h  JwtHelper.h  Logger.h  MySQLPool.h  Order.h  OrderService.h  PaymentService.h  RedisPool.h  TimingWheel.h  User.h  UserService.h  WebSocketServer.h
scripts/: atomic_bid.lua  bootstrap.sh  init_db.sql  performance_probe.py  run_local.sh  test.sh  test_auction.sh  test_auth.sh  test_bid.sh  test_db.sh  test_demo_frontend.sh  test_e2e.sh  test_frontend.sh  test_high_risk.sh  test_http.sh  test_integration.sh  test_item.sh  test_ops.sh  test_order.sh  test_payment.sh  test_review.sh  test_security.sh  test_statistics.sh  test_ui.sh
scripts/db/: mysql_test_env.sh  setup_local_mysql.sh  write_test_config.sh
scripts/deploy/: init_demo_env.sh  run_demo_server.sh  show_demo_walkthrough.sh  verify_release.sh
sql/: demo_data.sql  schema.sql  seed.sql
src/: main.cpp
src/access/http/: admin_http.cpp  admin_http.h  api_error_http.cpp  api_error_http.h  app_http.cpp  app_http.h  auction_admin_http.cpp  auction_admin_http.h  auction_http.cpp  auction_http.h  auction_public_http.cpp  auction_public_http.h  auction_ws.cpp  auction_ws.h  audit_http.cpp  audit_http.h  auth_http.cpp  auth_http.h  bid_http.cpp  bid_http.h  business_http.cpp  business_http.h  demo_http.cpp  demo_http.h  health_http.cpp  health_http.h  item_http.cpp  item_http.h  notification_http.cpp  notification_http.h  ops_http.cpp  ops_http.h  order_http.cpp  order_http.h  payment_http.cpp  payment_http.h  review_http.cpp  review_http.h  statistics_http.cpp  statistics_http.h  (+2 more)
src/application/: database_health_service.cpp  database_health_service.h  demo_dashboard_service.cpp  demo_dashboard_service.h  health_service.cpp  health_service.h
src/cache/: DoubleBuffer.cpp
src/common/config/: app_config.h  config_loader.cpp  config_loader.h
src/common/db/: mysql_connection.cpp  mysql_connection.h
src/common/errors/: error_code.cpp  error_code.h
src/common/http/: api_response.h  http_service_context.cpp  http_service_context.h  http_utils.cpp  http_utils.h
src/common/logging/: logger.cpp  logger.h
src/common/runtime/: application_bootstrap.cpp  application_bootstrap.h
src/config/: ConfigManager.cpp
src/db/: MySQLPool.cpp  RedisPool.cpp
src/engine/: AntiSnipe.cpp  BidEngine.cpp  TimingWheel.cpp
src/jobs/: auction_scheduler.cpp  auction_scheduler.h  order_scheduler.cpp  order_scheduler.h  statistics_scheduler.cpp  statistics_scheduler.h
src/middleware/: auth_middleware.cpp  auth_middleware.h
src/model/: Bid.cpp  Item.cpp  Order.cpp  User.cpp
src/modules/auction/: auction_exception.h  auction_service.cpp  auction_service.h  auction_types.h
src/modules/audit/: item_audit_service.cpp  item_audit_service.h
src/modules/auth/: auth_exception.h  auth_service.cpp  auth_service.h  auth_session_store.cpp  auth_session_store.h  auth_types.h  password_hasher.cpp  password_hasher.h  token_codec.cpp  token_codec.h
src/network/: HttpServer.cpp  WebSocketServer.cpp
src/repository/: auction_repository.cpp  auction_repository.h  auth_user_repository.cpp  auth_user_repository.h  base_repository.h  bid_repository.cpp  bid_repository.h  database_meta_repository.cpp  database_meta_repository.h  item_repository.cpp  item_repository.h  notification_repository.cpp  notification_repository.h  ops_repository.cpp  ops_repository.h  order_repository.cpp  order_repository.h  payment_repository.cpp  payment_repository.h  review_repository.cpp  review_repository.h  statistics_repository.cpp  statistics_repository.h
src/service/: AuctionService.cpp  ItemService.cpp  OrderService.cpp  PaymentService.cpp  UserService.cpp
src/util/: JwtHelper.cpp  Logger.cpp
src/ws/: auction_event_gateway.cpp  auction_event_gateway.h
tests/auction/: auction_flow_tests.cpp
tests/auth/: auth_flow_tests.cpp
tests/bid/: bid_flow_tests.cpp
tests/demo/: demo_dashboard_tests.cpp
tests/integration/: ApiFlowTest.cpp  database_smoke_tests.cpp  full_flow_tests.cpp
tests/item/: item_flow_tests.cpp
tests/ops/: ops_flow_tests.cpp
tests/order/: order_flow_tests.cpp
tests/payment/: payment_flow_tests.cpp
tests/review/: review_flow_tests.cpp
tests/security/: security_negative_tests.cpp
tests/statistics/: statistics_flow_tests.cpp
tests/stress/: high_risk_flow_tests.cpp
tests/ui/: app_page_acceptance_tests.cpp
tests/unit/: BidEngineTest.cpp  TimingWheelTest.cpp  smoke_tests.cpp
(+41 files in other folders)
